--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -214,7 +214,7 @@
         "overview": "نظرة عامة",
         "description": "الوصف",
         "close": "إغلاق",
-        "viewDemo": "عرض تجريبي مباشر"
+        "viewDemo": "عرض مباشر"
       },
       "projects": [
         {
@@ -288,6 +288,12 @@
           "description": "إيكو مونيتور هو نظام ذكي لمراقبة البيئة يوفر بيانات وتحليلات الطقس في الوقت الفعلي. يعرض مؤشرات رئيسية مثل درجة الحرارة والرطوبة وسرعة الرياح ومؤشر الأشعة فوق البنفسجية من خلال لوحات تفاعلية وتنبيهات ذكية لدعم اتخاذ القرار الاستباقي.",
           "image": "EM1.jpeg",
           "deploymentUrl": "https://eco-monitor-jade.vercel.app/"
+        },
+        {
+          "title": "نظام كشف الاحتيال",
+          "description": "هذا المشروع هو نظام لمراجعة والتحقق من الأنشطة الاحتيالية في تقييمات الأعمال، مصمم لتحليل والتحقق من أنشطة المراجعات التجارية. يعرض ملفات تعريف تفصيلية للشركات تشمل الموقع الجغرافي، معلومات الاتصال، التقييمات وإحصائيات المراجعات. يتتبع النظام إجمالي المراجعات وعدد المراجعين ومتوسط المراجعات لكل شخص لاكتشاف الأنماط المشبوهة. بفضل ميزات إعادة الفحص، تتبع الحالة، تصدير PDF وإدارة الطلبات، يساعد النظام في كشف السلوك الاحتيالي، وضمان صحة البيانات، ودعم اتخاذ القرارات المتعلقة بإدارة المراجعات والامتثال.",
+          "image": "FD1.jpeg",
+          "deploymentUrl": "https://review.reputationtask.com/login"
         },
         {
           "title": "تدريب PCO",
