--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -212,7 +212,7 @@
         "overview": "ওভারভিউ",
         "description": "বিবরণ",
         "close": "বন্ধ করুন",
-        "viewDemo": "লাইভ ডেমো দেখুন"
+        "viewDemo": "লাইভ দেখুন"
       },
       "projects": [
         {
@@ -286,6 +286,12 @@
           "description": "ইকোমনিটর একটি স্মার্ট পরিবেশ পর্যবেক্ষণ সিস্টেম, যা রিয়েল-টাইম আবহাওয়া তথ্য ও বিশ্লেষণ প্রদান করে। এতে তাপমাত্রা, আর্দ্রতা, বাতাসের গতি, চাপ, ইউভি সূচক ও বৃষ্টিপাতসহ গুরুত্বপূর্ণ ডেটা ইন্টারঅ্যাকটিভ ড্যাশবোর্ড ও চার্টের মাধ্যমে প্রদর্শিত হয়। ট্রেন্ড অ্যানালাইসিস, অ্যানিমেটেড ভিজুয়ালাইজেশন এবং সতর্কবার্তা সহ এটি আধুনিক ও ব্যবহারবান্ধব অভিজ্ঞতা প্রদান করে।",
           "image": "EM1.jpeg",
           "deploymentUrl": "https://eco-monitor-jade.vercel.app/"
+        },
+        {
+          "title": "জালিয়াতি শনাক্তকরণ সিস্টেম",
+          "description": "এই প্রকল্পটি একটি জালিয়াতি পর্যালোচনা ও যাচাইকরণ সিস্টেম, যা ব্যবসায়িক রিভিউ কার্যক্রম বিশ্লেষণ ও যাচাই করার জন্য ডিজাইন করা হয়েছে। এটি লোকেশন ম্যাপিং, যোগাযোগের তথ্য, রেটিং এবং রিভিউ পরিসংখ্যানসহ বিস্তারিত ব্যবসায়িক প্রোফাইল প্রদর্শন করে। প্ল্যাটফর্মটি মোট রিভিউ, রিভিউয়ার এবং প্রতি ব্যক্তির গড় রিভিউ ট্র্যাক করে সন্দেহজনক প্যাটার্ন শনাক্ত করে। রিস্ক্যান, স্ট্যাটাস ট্র্যাকিং, PDF এক্সপোর্ট এবং রিকোয়েস্ট ম্যানেজমেন্ট সুবিধার মাধ্যমে সিস্টেমটি জাল আচরণ শনাক্ত করতে, ডেটার সত্যতা নিশ্চিত করতে এবং রিভিউ মডারেশন ও কমপ্লায়েন্সের জন্য কার্যকর সিদ্ধান্ত গ্রহণে সহায়তা করে।",
+          "image": "FD1.jpeg",
+          "deploymentUrl": "https://review.reputationtask.com/login"
         },
         {
           "title": "PCO প্রশিক্ষণ",
