--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -312,6 +312,12 @@
           "deploymentUrl": "https://eco-monitor-jade.vercel.app/"
         },
         {
+          "title": "不正検出システム",
+          "description": "本プロジェクトは、ビジネスレビュー活動を分析・検証するために設計された不正レビュー確認システムです。位置マッピング、連絡先情報、評価、レビュー統計を含む詳細なビジネスプロフィールを表示します。総レビュー数、レビュアー数、1人当たりの平均レビュー数を追跡し、不審なパターンを特定します。再スキャン、ステータス管理、PDFエクスポート、リクエスト管理機能により、不正行為の検出、データの信頼性確保、レビュー管理およびコンプライアンスの意思決定を支援します。",
+          "image": "FD1.jpeg",
+          "deploymentUrl": "https://review.reputationtask.com/login"
+        },
+        {
           "title": "PCO ドライバー研修",
           "description": "PCO ドライバー研修は、英国のプロドライバー向けに設計された専門プラットフォームで、包括的なトレーニング、模擬試験、資格取得支援を提供します。",
           "image": "PCO1.png",
